added health check api
