# swagger-output.json
@@ -326,6 +326,40 @@
           }
         }
       }
+    },
+    "/health": {
+      "get": {
+        "summary": "Health check of the server",
+        "responses": {
+          "200": {
+            "description": "Server is running",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "status": {
+                      "type": "string",
+                      "example": "Up and Running"
+                    },
+                    "uptime": {
+                      "type": "number",
+                      "example": 123456
+                    },
+                    "timestamp": {
+                      "type": "string",
+                      "example": "2024-01-01T00:00:00.000Z"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Server is down"
+          }
+        }
+      }
     }
   },
   "tags": []
